  EntityEditModel.validate() bug fixed, it allowed null values in non-nullable columns during update, since L921
  EntityApplicationPanel.savePreferences() added, called during exit()
  EntityTablePanel.addSouthPanelButtons() removed, initializeSouthPanelToolbar() added
  EntityPanel.getSouthPanelButtons() renamed to getSouthPanelControls(), result no longer includes update button
  EntityPanel.getUpdateButton() removed
  TextInputPanel.maxLength field added
  EntityEditPanel.createTextInputPanel() now uses the above
  TextFieldPlus, fixed bug, getMaxLength() did not prevent insert in case the content was pasted into the field
  EntityApplicationPanel.getSupportModelControlSet() renamed to getSupportTableControlSet()
  EntityApplicationPanel.showInitializationDialog() renamed to showStartupDialog()
  EntityApplicationPanel.evtApplicationStarted event field added
  StateGroup, fixed ConcurrentModification error by iterating array in updateAccordingToState()
  DbConnection.toString() added, for logging
  EntityLookupField now uses wait cursor while performing the query
  EntityEditModel.isPropertyNullable() added entity parameter
  EntityEditModel.validate() overloaded with entity parameter
  EntityPropertyLinkTest separated into multiple test classes
  DoubleTextPropertyLinkTest, added a simple validation test
  Spelling corrected throughout
  EntityLookupField now uses Entity.compareTo() for lexical ordering of selection list
  Entity.setDefaultProxy() not used in demos, problematic during tests for example, when one proxy overrides another
  EntityEditPanel.setDefaultFocus() now requests focus for the base panel in case no default focus component is set
  MethodLogger.getLogEntries() does not fail when logging is not enabled
  EntityEditModel.validate() removed value parameter
  DefaultExceptionHandler.unwrapRuntimeException() now works properly
  DefaultExceptionHandler.unwrapRuntimeException() bug fixed
  EntityTableModel.getFetchCount() added